# portfolio_api

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pylama.ini  pyproject.toml
backend/: .env.sample  pyproject.toml
backend/portfolio_api/: main.py
backend/portfolio_api/api_v1/: api.py
backend/portfolio_api/api_v1/endpoints/: projects.py
backend/portfolio_api/data/: json.py
backend/portfolio_api/data/json_files/: pr_featured.json  pr_other.json  projects.json
backend/portfolio_api/github/: user.py
backend/portfolio_api/models/: project.py
backend/portfolio_api/models/pr/: featured.py
backend/tests/api/: conftest.py  test_projects.py  test_pull_requests.py
portfolio_api/: config.py  main.py
portfolio_api/api_v1/endpoints/: projects.py  pull_requests.py
portfolio_api/data/: __init__.py  json.py
portfolio_api/data/json_files/: pr_featured.json  pr_other.json  projects.json
portfolio_api/github/: api.py  pr.py
portfolio_api/models/: __init__.py  project.py  tech.py
portfolio_api/models/pr/: featured.py  other.py
resume_api/: main.py
scripts/: buddy-ci.sh  build.sh
tests/: test_app.py  test_github_api.py
tests/api/: test_projects.py  test_pull_requests.py
