[tool.poetry]
name = "portfolio_api"
version = "0.1.0"
description = "API for Pax's Portfolio/Online Resume"
authors = ["Margret 'Pax' Williams"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {version = "^0.13.4", extras = ["standard"]}
httpx = "^0.17.0"
pydantic = {version = "^1.8.1", extras = ["dotenv"]}

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
pytest = "^6.2.2"
isort = "^5.7.0"
autoflake = "^1.4"
bandit = "^1.7.0"
black = {version = "^20.8b1", allow-prereleases = true}
pylama = "^7.7.1"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
